infra/k8s/overlays/infra/staging/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nafura-infra-staging
  labels:
    nafura.io/layer: infra
    nafura.io/env: staging
