infra/k8s/overlays/infra/staging/patch-keycloak-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: keycloak
          image: nafura-keycloak:staging
