infra/k8s/overlays/infra/staging/patch-ingress-http-only.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nafura-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/hsts: "false"
    nginx.ingress.kubernetes.io/hsts-max-age: "0"
spec:
  tls: []
